k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: securityhallofshame
spec:
  replicas: 2
  serviceName: securityhallofshame
  selector:
    matchLabels:
      run: securityhallofshame
  template:
    metadata:
      labels:
        run: securityhallofshame
    spec:
      containers:
      - name: securityhallofshame
        image: jakemakesstuff/securityhallofshame
        imagePullPolicy: Always
        ports:
        - containerPort: 7000
        readinessProbe:
          httpGet:
            port: 7000
            path: /
          initialDelaySeconds: 3
          periodSeconds: 3
        livenessProbe:
          httpGet:
            port: 7000
            path: /
          initialDelaySeconds: 3
          periodSeconds: 3
