k8s/redis.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: securityhallofshame-cache
  labels:
    run: securityhallofshame-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      run: securityhallofshame-cache
  template:
    metadata:
      labels:
        run: securityhallofshame-cache
    spec:
      containers:
      - name: securityhallofshame-cache
        image: redis:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: securityhallofshame-cache
  labels:
    run: securityhallofshame-cache
spec:
  ports:
  - port: 6379
    protocol: TCP
  selector:
    run: securityhallofshame-cache
