k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: securityhallofshame
  labels:
    run: securityhallofshame
spec:
  ports:
    - port: 7000
      protocol: TCP
  selector:
    run: securityhallofshame
